@@ -1,3 +1,9 @@
+2004-03-07  Richard Henderson  <rth@redhat.com>
+
+	* gas/alpha/elf-reloc-8.d, gas/cfi/cfi-alpha-1.d,
+	gas/cfi/cfi-alpha-2.d, gas/cfi/cfi-alpha-3.d, gas/cfi/cfi-common-1.d,
+	gas/cfi/cfi-common-2.d, gas/cfi/cfi-common-3.d: Adjust offsets.
+
 2004-03-03  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* gas/sh/sh64/err-dsp.s: Fix expected error message.
